// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns template with default values 1`] = `
Object {
  "urlset": Object {
    "@xmlns": "http://www.sitemaps.org/schemas/sitemap/0.9",
    "@xmlns:image": "http://www.google.com/schemas/sitemap-image/1.1",
    "@xmlns:news": "http://www.google.com/schemas/sitemap-news/0.9",
    "url": Array [
      Object {
        "#": Array [
          Object {
            "image:image": Object {
              "image:loc": "hi/abcdefghijklmnopqrstuvwxyz=/arc-anglerfish-arc2-prod-demo.s3.amazonaws.com/public/STORY_ONE_IMAGE.png",
              "image:title": Object {
                "$": "Hand Washing",
              },
            },
          },
        ],
        "changefreq": "always",
        "lastmod": "2018-10-05T14:28:25.674Z",
        "loc": "http://demo-prod.origin.arcpublishing.com/food/2020/04/07/tips-for-safe-hand-washing",
        "news:news": Object {
          "news:keywords": Object {
            "$": "animal videos",
          },
          "news:publication": Object {
            "news:language": "en",
            "news:name": "google news",
          },
          "news:publication_date": "2018-10-05T14:28:25.674Z",
          "news:title": Object {
            "$": "dog running outside enjoying the sunny day",
          },
        },
        "priority": "0.5",
      },
      Object {
        "changefreq": "always",
        "lastmod": "2021-11-15T12:18:25.674Z",
        "loc": "http://demo-prod.origin.arcpublishing.com/food/2021/04/07/best-sourdough-recipes",
        "news:news": Object {
          "news:keywords": Object {
            "$": "food videos",
          },
          "news:publication": Object {
            "news:language": "en",
            "news:name": "google news",
          },
          "news:publication_date": "2021-11-15T12:18:25.674Z",
          "news:title": Object {
            "$": "Best Sourdough you have ever made",
          },
        },
        "priority": "0.5",
      },
    ],
  },
}
`;

exports[`returns template with empty values 1`] = `
Object {
  "urlset": Object {
    "@xmlns": "http://www.sitemaps.org/schemas/sitemap/0.9",
    "@xmlns:image": "http://www.google.com/schemas/sitemap-image/1.1",
    "@xmlns:news": "http://www.google.com/schemas/sitemap-news/0.9",
    "url": Array [
      Object {
        "changefreq": "",
        "lastmod": undefined,
        "loc": "http://demo-prod.origin.arcpublishing.com/food/2020/04/07/tips-for-safe-hand-washing",
        "news:news": Object {
          "news:publication": Object {
            "news:language": "en",
            "news:name": "google news",
          },
          "news:publication_date": undefined,
        },
        "priority": "",
      },
      Object {
        "changefreq": "",
        "lastmod": undefined,
        "loc": "http://demo-prod.origin.arcpublishing.com/food/2021/04/07/best-sourdough-recipes",
        "news:news": Object {
          "news:publication": Object {
            "news:language": "en",
            "news:name": "google news",
          },
          "news:publication_date": undefined,
        },
        "priority": "",
      },
    ],
  },
}
`;
